--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -31,4 +31,4 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 models:
   jaffle_shop:
-    materialized: view
+    materialized: table
